# LineDefence

./: .gitmodules  CMakeLists.txt
src/: Army.cpp  Army.h  CMakeLists.txt  Hero.h  Hero.test.cpp  HeroList.cpp  HeroList.h  fight.cpp  fight.h  heros.yaml  main.cpp
src/common/: Army.test.cpp  Hero.h  Hero.test.cpp
src/evolve/: evolve.cpp  evolve.h
src/fight/: fight.cpp  fight.h
src/tournament/: Team.cpp  Team.h  tournament.cpp  tournament.h
